[package]
name = "drcom4scut"
version = "0.3.0"
authors = ["SeaLoong <sealoongw@foxmail.com>"]
edition = "2021"
description = "A 3rd-party Drcom client for SCUT."
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo"] }
crossbeam-channel = "0.5.13"
encoding_rs = "0.8.35"
hex = "0.4.3"
hostname = "0.4.0"
log = "0.4.22"
md-5 = "0.10.6"
rand = "0.8.5"
trust-dns-resolver = "0.23.2"

[dependencies.config]
version = "0.14.1"
default-features = false
features = ["yaml"]

[dependencies.log4rs]
version = "1.3.0"
features = ["gzip"]
optional = true

[dependencies.pnet]
version = "0.35"
features = ["std"]

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true

[features]
default = ["log4rs"]
